<resources>
    <string name="app_name">job_project</string>
    <string name="email">Email</string>
    <string name="pasword">Password</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account?</string>
    <string name="any_questions">Any questions?</string>
    <string name="contact_us">Contact us</string>
    <string name="login">Login</string>
    <string name="already_nhave_an_naccount">Already have \nan account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
</resources>