<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.conf.SignInActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/higherLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/wave1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/already_nhave_an_naccount"
            android:layout_marginStart="50dp"
            android:textSize="30sp"
            android:textStyle="bold" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/centerLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="33dp"
        android:paddingEnd="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:hintTextColor="@color/colorPrimaryVariant"
            android:textColorHint="@color/colorPrimaryVariant">

            <EditText
                android:id="@+id/emailEdt"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                style="@style/modifiedEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/pasword"
            app:hintTextColor="@color/colorPrimaryVariant"
            android:textColorHint="@color/colorPrimaryVariant"
            app:endIconMode="password_toggle">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                style="@style/modifiedEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/centerLl">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:background="@drawable/round_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/dont_have_acc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_register_now"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryVariant"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="33dp"
        android:paddingTop="50dp"
        android:paddingEnd="33dp"
        app:layout_constraintTop_toBottomOf="@id/loginLinearLayout">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:background="@color/colorPrimaryVariant" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_weight="1"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryVariant"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:background="@color/colorPrimaryVariant" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/contactLinearLayout">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/fbBtn"
            android:background="@drawable/facebook"
            android:layout_marginStart="150dp"
            android:backgroundTint="@color/colorPrimaryVariant"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/instBtn"
            android:background="@drawable/premium_icon_instagram_717392"
            android:layout_marginStart="22dp"
            android:backgroundTint="@color/colorPrimaryVariant"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>