<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/higherLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:text="Already \nhave an \nAccount?"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/android" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/centerLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="33dp"
        android:paddingEnd="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <EditText
                android:id="@+id/emailEdt"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                style="@style/modifiedEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/pasword"
            app:endIconMode="password_toggle">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                style="@style/modifiedEditText"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/centerLl">

        <Button
            android:id="@+id/loginBtn"
            style="@style/Widget.Material3.Button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="Login"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/dont_have_acc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_register_now"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="33dp"
        android:paddingTop="50dp"
        android:paddingEnd="33dp"
        app:layout_constraintTop_toBottomOf="@id/loginLinearLayout">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_weight="1"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:background="@android:color/black" />

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    app:layout_constraintTop_toBottomOf="@id/contactLinearLayout">
    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/free_icon_facebook_174848"
        android:layout_marginStart="148dp"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/premium_icon_instagram_717392"
        android:layout_marginStart="22dp"/>

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>